--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -49,7 +49,7 @@ Les \textbf{algorithmes quantiques} permettent de résoudre certains problèmes 
 \end{frame}
 
 \begin{frame}
-Les machines quantiques sont en développement
+Les machines quantiques sont en développement et resteront coûteuses
 $$\Downarrow$$
 Il y a un besoin d'outils de développement et vérification d'algorithmes quantiques
 \pause
@@ -97,8 +97,8 @@ Suite du projet
     \end{itemize}
     \item Nouveaux concepts
     \begin{itemize}
-        \item Multi-valuation (QMDD)
-        \item Carte locale inversible (LIMQDD)
+        \item Automates d'arbres
+        \item Diagrammes de décisions et applications localement inversibles (LIMDD)
     \end{itemize}
 \end{itemize}
 \end{frame}
@@ -142,7 +142,7 @@ Complément sur les césures
 \begin{frame}{Pile technique}
 \begin{columns}
     \begin{column}{0.5\textwidth}
-        Implémentation
+        Implémentation (2,2k lignes de code)
         \begin{itemize}
             \item \textbf{Code}
             \begin{itemize}
