--- a/presentation/travail-resultats.tex
+++ b/presentation/travail-resultats.tex
@@ -5,6 +5,7 @@
       \item[\checkmark] Intervalles de $\mathbb C$ cartésiens \& polaires
       \item[\checkmark] Diagrammes
       \item[\checkmark] Approximation locale, globale
+      \item[\checkmark] Erreur
       \item[\checkmark] Fusion forcée
       \item[\checkmark] Algorithmes de réduction
   \end{itemize}
