--- a/presentation/cadre-formation.tex
+++ b/presentation/cadre-formation.tex
@@ -24,31 +24,33 @@
 
 % 8. Résumez vos choix pour la suite en termes de S8, électifs, international, éventuellement césure
 \begin{frame}{Année prochaine}
-\begin{center}
-  Continuer la formation en \textbf{informatique théorique}
-\end{center}
-\small{Électifs} % envisagés, choix possibles
-\footnotesize{
-\begin{itemize}
-  \item Génie logiciel orienté objet
-  \item Informatique théorique
-  \item Calcul haute performance
-  \item Modèles et sys. pour la gestion de données
-\end{itemize}}
-\vspace{1em}
-\small{Complément scientifique : métaheuristiques}
+  \begin{center}
+    Continuer la formation en \textbf{informatique théorique}...
+  \end{center}
+  \small{Électifs} % envisagés, choix possibles
+  \footnotesize{
+  \begin{itemize}
+    \item Génie logiciel orienté objet
+    \item Informatique théorique
+    \item Calcul haute performance
+    \item Modèles et sys. pour la gestion de données
+  \end{itemize}}
+  \vspace{1em}
+  \small{Complément scientifique : métaheuristiques}
 \end{frame}
 
 \begin{frame}{Année prochaine}
-\textbf{S8} envisagés
-\begin{itemize}
-  \item Digital Tech Year
-  \item S8 à CentraleSupélec
+  \begin{center}
+    ... et progresser en \textbf{programmation}
+  \end{center}
+  \small{Année de césure \textit{Digital Tech Year}}
+  \footnotesize{
   \begin{itemize}
-      \item Continuité du projet
+    \item Semestre au Paris Digital Lab
+    \item Semestre en entreprise à l'international
+    \item Projets variés en équipe
   \end{itemize}
-  \item Mobilité internationale
-\end{itemize}
+  }
 \end{frame}
 
 % voire souhaits pour la 3e année
