Mention simulation instead of development

--- a/presentation/contexte.tex
+++ b/presentation/contexte.tex
@@ -15,7 +15,7 @@
 \begin{frame}{Le besoin}
   Les machines quantiques sont en développement et resteront coûteuses financièrement
   $$\Downarrow$$
-  Il y a un besoin d'outils de développement et vérification d'algorithmes quantiques
+  Il y a un besoin d'outils de simulation et de vérification d'algorithmes quantiques
 \end{frame}
 
 \begin{frame}{Simulations}
