Next implementation functionalities

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -78,6 +78,11 @@ Suite du projet
         \item Automates d'arbres
         \item Diagrammes de décisions et applications localement inversibles (LIMDD)
     \end{itemize}
+    \item \textbf{Implémentation}
+    \begin{itemize}
+        \item Interface graphique
+        \item Lecteur QASM
+    \end{itemize}
 \end{itemize}
 \end{frame}
 
