➕ Add reference to GitHub repo
Add bibtex reference to the projet's GitHub repository

--- a/report/bibliographie.bib
+++ b/report/bibliographie.bib
@@ -1,21 +1,20 @@
-\bibitem{CousotCousot77-1}
-P{.} Cousot and R{.} Cousot.
-\newblock Abstract interpretation: a unified lattice model for static 
-  analysis of programs by construction or approximation of fixpoints.
-\newblock In \emph{Conference Record of the Fourth Annual ACM 
-  SIGPLAN-SIGACT Symposium on Principles of Programming Languages}, 
-  pages 238--252, Los Angeles, California, 1977.  ACM Press, New York, 
-  NY, USA.
-
 @inproceedings{CousotCousot77-1,
-   author =    {Cousot, P{.} and Cousot, R{.}},
-   title =     {Abstract interpretation: a unified lattice model for static 
-                analysis of programs by construction or approximation of 
-                fixpoints},
-   pages =     {238--252},
-   booktitle = {Conference Record of the Fourth Annual ACM SIGPLAN-SIGACT 
-                Symposium on Principles of Programming Languages},
-   address =   {Los Angeles, California},
-   publisher = {ACM Press, New York, NY},
-   year =      1977,
+  author =    {Cousot, P{.} and Cousot, R{.}},
+  title =     {Abstract interpretation: a unified lattice model for static 
+              analysis of programs by construction or approximation of 
+              fixpoints},
+  pages =     {238--252},
+  booktitle = {Conference Record of the Fourth Annual ACM SIGPLAN-SIGACT 
+              Symposium on Principles of Programming Languages},
+  address =   {Los Angeles, California},
+  publisher = {ACM Press, New York, NY},
+  year =      1977,
+}
+
+@software{Leroy_Coto_2024,
+  author = {Leroy, Malo},
+  month = jun,
+  title = {{Coto}},
+  url = {https://github.com/Firefnix/coto/},
+  year = {2024}
 }
