💄 Better style for GitHub repo

--- a/report/bibliographie.bib
+++ b/report/bibliographie.bib
@@ -18,3 +18,38 @@
   url = {https://github.com/Firefnix/coto/},
   year = {2024}
 }
+
+@article{Bichsel_2023,
+  title={Abstraqt: Analysis of Quantum Circuits via Abstract Stabilizer Simulation},
+  volume={7},
+  ISSN={2521-327X},
+  url={http://dx.doi.org/10.22331/q-2023-11-20-1185},
+  DOI={10.22331/q-2023-11-20-1185},
+  journal={Quantum},
+  publisher={Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften},
+  author={Bichsel, Benjamin and Paradis, Anouk and Baader, Maximilian and Vechev, Martin},
+  year={2023},
+  month=nov, pages={1185}
+}
+
+@misc{chen2023automatabased,
+  title={An Automata-based Framework for Verification and Bug Hunting in Quantum Circuits (Technical Report)},
+  author={Yu-Fang Chen and Kai-Min Chung and Ondřej Lengál and Jyun-Ao Lin and Wei-Lun Tsai and Di-De Yen},
+  year={2023},
+  eprint={2301.07747},
+  archivePrefix={arXiv},
+  primaryClass={cs.LO}
+}
+
+@article{Vinkhuijzen_2023,
+  title={LIMDD: A Decision Diagram for Simulation of Quantum Computing Including Stabilizer States},
+  volume={7},
+  ISSN={2521-327X},
+  url={http://dx.doi.org/10.22331/q-2023-09-11-1108},
+  DOI={10.22331/q-2023-09-11-1108},
+  journal={Quantum},
+  publisher={Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften},
+  author={Vinkhuijzen, Lieuwe and Coopmans, Tim and Elkouss, David and Dunjko, Vedran and Laarman, Alfons},
+  year={2023},
+  month=sep, pages={1108}
+}
