--- a/report/main.tex
+++ b/report/main.tex
@@ -21,6 +21,7 @@
 \hypersetup{%
   colorlinks=false,% hyperlinks will be black
   linkbordercolor=cs,% hyperlink borders will be red
+  urlbordercolor=cs,% hyperlink borders will be red
 %   pdfborderstyle={/S/U/W 1}% border style will be underline of width 1pt
 }
 %pour la mise en page des tableaux
