--- a/report/bibliographie.bib
+++ b/report/bibliographie.bib
@@ -11,10 +11,11 @@
   year =      1977,
 }
 
-@software{Leroy_Coto_2024,
+@misc{Leroy_Coto_2024,
   author = {Leroy, Malo},
   month = jun,
-  title = {{Coto}},
+  title = {Abstract additive quantum decision diagrams},
+  howpublished = {\url{https://github.com/Firefnix/coto/}},
   url = {https://github.com/Firefnix/coto/},
   year = {2024}
 }
@@ -52,4 +53,12 @@
   author={Vinkhuijzen, Lieuwe and Coopmans, Tim and Elkouss, David and Dunjko, Vedran and Laarman, Alfons},
   year={2023},
   month=sep, pages={1108}
+}
+
+@book{Rosendahl1995,
+  author = {Mads Rosendahl},
+  title = {Introduction to abstract interpretation},
+  publisher = {Computer Science University of Copenhagen},
+  pagestotal = {69},
+  year ={1995},
 }
