➕ Add reference to DD
Add reference to decision diagrams

--- a/report/bibliographie.bib
+++ b/report/bibliographie.bib
@@ -11,7 +11,7 @@
   year =      1977,
 }
 
-@misc{Leroy_Coto_2024,
+@misc{Leroy_2024,
   author = {Leroy, Malo},
   month = jun,
   title = {Abstract additive quantum decision diagrams},
@@ -33,7 +33,7 @@
   month=nov, pages={1185}
 }
 
-@misc{chen2023automatabased,
+@misc{Chen_2023,
   title={An Automata-based Framework for Verification and Bug Hunting in Quantum Circuits (Technical Report)},
   author={Yu-Fang Chen and Kai-Min Chung and Ondřej Lengál and Jyun-Ao Lin and Wei-Lun Tsai and Di-De Yen},
   year={2023},
@@ -55,10 +55,24 @@
   month=sep, pages={1108}
 }
 
-@book{Rosendahl1995,
+@book{Rosendahl_1995,
   author = {Mads Rosendahl},
   title = {Introduction to abstract interpretation},
   publisher = {Computer Science University of Copenhagen},
   pagestotal = {69},
   year ={1995},
 }
+
+@book{Minato_1996,
+  series = {Kluwer international series in engineering and computer science. VLSI, computer architecture, and digital signal processing},
+  abstract = {Symbolic Boolean manipulation using binary decision diagrams (BDDs) has been successfully applied to a wide variety of tasks, particularly in very large scale integration (VLSI) computer-aided design (CAD). The concept of decision graphs as an abstract representation of Boolean functions dates back to the early work by Lee and Akers. In the last ten years, BDDs have found widespread use as a concrete data structure for symbolic Boolean manipulation. With BDDs, functions can be constructed, manipulated, and compared by simple and efficient graph algorithms. Since Boolean functions can represent not just digital circuit functions, but also such mathematical domains as sets and relations, a wide variety of CAD problems can be solved using BDDs. `Binary Decision Diagrams and Applications for VLSI CAD provides valuable information for both those who are new to BDDs as well as to long time aficionados.' -from the Foreword by Randal E. Bryant. `Over the past ten years ... BDDs have attracted the attention of many researchers because of their suitability for representing Boolean functions. They are now widely used in many practical VLSI CAD systems. ... this book can serve as an introduction to BDD techniques and ... it presents several new ideas on BDDs and their applications. ... many computer scientists and engineers will be interested in this book since Boolean function manipulation is a fundamental technique not only in digital system design but also in exploring various problems in computer science.' - from the Preface by Shin-ichi Minato.},
+  isbn = {1-4612-8558-5},
+  year = {1996},
+  pages          = {7--11},
+  publisher      = {Springer New York, NY},
+  title = {Binary decision diagrams and applications for VLSI CAD},
+  language = {eng},
+  author = {Minato, Shin-ichi},
+  keywords = {Computer-aided design; Integrated circuits -- Very large scale integration -- Design -- Data processing},
+}
+
