--- a/report/Conclusion.tex
+++ b/report/Conclusion.tex
@@ -14,6 +14,6 @@ Le travail réalisé sur cette période est donc encourageant : malgré des diff
 
 Plusieurs perspectives peuvent être envisagées pour prolonger les travaux réalisés. D'une part, puisque plusieurs choix dans la définition du modèle ont étés faits de manière arbitraire parmi plusieurs options possibles (fonction d'erreur notamment), il est pertinent de réaliser de nombreuses simulations dans des configurations différentes afin de déterminer les choix les plus pertinents.
 
-Nous pourrons aussi étendre le modèle avec d'autres concepts, comme les automates d'arbres pour la vérification \cite{chen2023automatabased} ou les diagrammes de décisions et applications localement inversibles (LIMDD) \cite{Vinkhuijzen_2023}. Enfin, l'implémentation aurait à gagner d'être plus facile d'utilisation, par exemple avec une interface graphique et un lecteur QASM (équivalent quantique du format assembleur en informatique classique).
+Nous pourrons aussi étendre le modèle avec d'autres concepts, comme les automates d'arbres pour la vérification \cite{Chen_2023} ou les diagrammes de décisions et applications localement inversibles (LIMDD) \cite{Vinkhuijzen_2023}. Enfin, l'implémentation aurait à gagner d'être plus facile d'utilisation, par exemple avec une interface graphique et un lecteur QASM (équivalent quantique du format assembleur en informatique classique).
 
 Ces axes de travail pourront être explorés au premier semestre de la deuxième année du cursus CentraleSupélec si le projet est prolongé.
