--- a/report/bibliographie.bib
+++ b/report/bibliographie.bib
@@ -76,3 +76,33 @@
   keywords = {Computer-aided design; Integrated circuits -- Very large scale integration -- Design -- Data processing},
 }
 
+@article{Rokne_1971,
+  author = {Rokne, J. and Lancaster, P.},
+  title = {Complex interval arithmetic},
+  year = {1971},
+  issue_date = {Feb. 1971},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  volume = {14},
+  number = {2},
+  issn = {0001-0782},
+  url = {https://doi.org/10.1145/362515.362563},
+  doi = {10.1145/362515.362563},
+  abstract = {Complex interval arithmetic is defined using real interval arithmetic. Complex interval division is defined so as to assure smallest possible resulting intervals.},
+  journal = {Commun. ACM},
+  month = {feb},
+  pages = {111–112},
+  numpages = {2},
+  keywords = {real intervals, real interval arithmetic, complex intervals, complex interval arithmetic}
+}
+
+@article{Sunaga_2009,
+author = {Teruo Sunaga},
+title = {{Theory of an interval algebra and its application to numerical analysis [Reprint of Res. Assoc. Appl. Geom. Mem. 2 (1958), 29–46]}},
+volume = {26},
+journal = {Japan Journal of Industrial and Applied Mathematics},
+number = {2-3},
+publisher = {Japan Society for Industrial and Applied Mathematics},
+pages = {125 -- 143},
+year = {2009},
+}
