--- a/report/main.tex
+++ b/report/main.tex
@@ -22,6 +22,7 @@
   colorlinks=false,% hyperlinks will be black
   linkbordercolor=cs,% hyperlink borders will be red
   urlbordercolor=cs,% hyperlink borders will be red
+  citebordercolor=cs,
 %   pdfborderstyle={/S/U/W 1}% border style will be underline of width 1pt
 }
 %pour la mise en page des tableaux
