💄 Minor layout adjustments

--- a/report/Titre.tex
+++ b/report/Titre.tex
@@ -13,7 +13,7 @@
 {\huge \bfseries Autour des Diagrammes de Décision Quantiques\\
 [0.4cm] }
 
-{\large \bfseries Parcours recherche -- Projet S6\\[0.4cm] }
+{\large \bfseries Rapport -- Parcours recherche -- Projet S6\\[0.4cm] }
 {\large \bfseries \textsl{Élève : Malo \textsc{Leroy}}\\ }
 {\large \bfseries \textsl{Encadrant : Renaud \textsc{Vilmart}}\\[0.4cm] }
 
