✏️ Minor layout adjustments

--- a/report/main.tex
+++ b/report/main.tex
@@ -31,8 +31,11 @@
 %espacement entre les lignes
 \usepackage{setspace}
 \usepackage{svg}
-%modifier la mise en page de l'abstract
-\usepackage{abstract}
+
+% Special symbols
+\usepackage{amssymb}
+\usepackage{mathrsfs}
+
 %police et mise en page (marges) du document
 \usepackage[T1]{fontenc}
 \usepackage[top=2cm, bottom=2cm, left=2cm, right=2cm]{geometry}
@@ -105,6 +108,7 @@
 \input{Introduction.tex}
 
 \input{Modele.tex}
+
 \input{Implementation.tex}
 
 \input{Conclusion.tex}
